# Dev_Pessoal

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
data/eu-preciso-que-voc-crie-uma-pagina-web-q/: ## Observações  Dockerfile  Makefile  PASSOS_EXECUCAO.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/eu-preciso-que-voc-crie-uma-pagina-web-q/src/app/: main.py
data/eu-preciso-que-voc-crie-uma-pagina-web-q/src/app/api/: saude.py
data/eu-preciso-que-voc-crie-uma-pagina-web-q/src/app/core/: errors.py  logging_config.py  settings.py
data/eu-preciso-que-voc-crie-uma-pagina-web-q/src/app/schemas/: base.py
data/eu-preciso-que-voc-crie-uma-pagina-web-q/src/app/services/: modulo.py
data/eu-preciso-que-voc-crie-uma-pagina-web-q/static/: index.html  script.js  style.css
data/eu-preciso-que-voc-crie-uma-pagina-web-q/tests/: test_saude.py
scripts/: exemplo_curl_chat.sh  exemplo_curl_gerar.sh
src/app/: main.py
src/app/adapters/: fs_client.py  git_client.py  llm_client.py
src/app/api/: chat.py  conversas.py  gerar.py  saude.py
src/app/core/: errors.py  logging_config.py  settings.py
src/app/frontend/quest-talk-gui/: .env.example  README.md  index.html
src/app/frontend/quest-talk-gui/src/: index.css
src/app/frontend/quest-talk-gui/src/components/: ChatInput.tsx  (+3 more)
src/app/schemas/: base.py  chat.py  conversa.py  gerar.py
src/app/services/: agente.py  conversas.py  planner.py  prompt_base.py  writer.py
src/app/utils/: text.py  validators.py
(+3 files in other folders)
